# youtube-chatoverlay

./: .gitignore  README.txt  install.bat  pyproject.toml  run.bat
.github/workflows/: release.yml
installer/: build_installer.ps1  launch.cmd  setup.iss
src/youtube_chat_overlay/: __init__.py  __main__.py  config.py
src/youtube_chat_overlay/handlers/: __init__.py  updates.py
src/youtube_chat_overlay/ui/: __init__.py  application.py
